# OpenCV-Server

./: .gitignore  Server-Client-Cpp.sln  init.sh  initWeb.sh
Client/: Client.vcxproj  main.cpp
Linux/: CMakeLists.txt  OpenCVInstall  OpenCVInstall.sh  launch.sh
Linux/Client/: CMakeLists.txt  OpenCVInstall.sh  launch.sh
Linux/Client/src/: main.cpp
Linux/Server/: CMakeLists.txt  OpenCVInstall.sh  OpenCVInstallCUDA.sh  launch.sh
Linux/Server/src/: logger.hpp  main.cpp
Linux/nginx/: install.sh  nginx.conf
Linux/nginx/web/: index.html  style.css
Linux/src/: main.cpp
Server/: Server.vcxproj  main.cpp
