cmake_minimum_required(VERSION 3.12)
project( Server )
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set (CMAKE_CXX_STANDARD 20)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Server src/main.cpp src/logger.hpp )
target_link_libraries( Server ${OpenCV_LIBS} )